tests/errors/intrinsics_03.f90
program intrinsics_03
    print *, ibclr(1, -2)
end program